# Data-Science-Agents-Simplified

./: .gitignore  001_plotly_langchain.ipynb  002_agent.ipynb  002_agent.py  003_multi_agent.ipynb  003_multi_agent.py  004_empty.py  004_langgraph.json  004_orch_OFF_v_ON.ipynb  004_orchestration_OFF.py  004_orchestration_ON.py  005_SGLang.ipynb  006_MCP_LangGraph.ipynb  006_MCP_LangGraph_Stocks.ipynb  006_MCP_Server.py  006_README.md  README.md  pyproject.toml
