[project]
name = "agents-simplified-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.10.0",
    "cudf-cu12>=25.10.0",
    "ipywidgets>=8.1.8",
    "jupyterlab==4.5.0",
    "jupyterlab-nvdashboard>=0.13.0",
    "kaleido>=1.2.0",
    "langchain-experimental==0.4.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai==1.1.0",
    "langgraph==1.0.4",
    "langgraph-api==0.5.32",
    "langgraph-cli==0.4.7",
    "mcp>=1.23.1",
    "mplfinance>=0.12.10b0",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "sglang>=0.5.6",
    "yfinance>=0.2.66",
]
